# jftt-compiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
debugger/: CMakeLists.txt  debugger-wm.cpp  debugger-wm.hpp  debugger.cpp
examples2023/: binary.imp  binary_org.imp  myexample0.imp  test.imp
scripts/: format.sh  run_compiler.py
src/: CMakeLists.txt  compiler.cpp  error.cpp  error.hpp  lexer.hpp  token.hpp
src/analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.hpp
src/ast-optimizer/: CMakeLists.txt  ast-optimizer.cpp  ast-optimizer.hpp
src/common/: CMakeLists.txt  ast.hpp  error.cpp  error.hpp  expected.hpp  instruction.cpp  instruction.hpp  token.hpp
src/emitter/: CMakeLists.txt  emitter.cpp  emitter.hpp  instruction.hpp
src/ir/: CMakeLists.txt  cfg.hpp  cfg_builder.cpp  cfg_builder.hpp  emitter_cfg.hpp  high_level_ir.cpp  high_level_ir.hpp  low_level_ir.cpp  low_level_ir.hpp  low_level_ir_builder.cpp  low_level_ir_builder.hpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parser/: CMakeLists.txt  ast.hpp  parser.cpp  parser.hpp
src/test_vm/: CMakeLists.txt  mw.cc  mw.hpp
src/vm/: CMakeLists.txt  mw.cc  mw.hpp
src/vm-cln/: CMakeLists.txt  mw-cln.cc  mw-cln.hpp
tests/: CMakeLists.txt  emitter_test.cpp  lexer_test.cpp  parser_test.cpp  tests_shared.hpp
